--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,18 @@
-version: '3'
+# Use postgres/example user/password credentials
+version: '3.1'
 
 services:
 
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - data:/data
+  db:
+    image: postgres
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: password
+      POSTGRES_PASSWORD: example
+    ports:
+      - "5432:5432"
 
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
+  adminer:
+    image: adminer
     restart: always
     ports:
-      - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_SERVER: mongodb
-
-volumes:
-  data: {}
+      - "8080:8080"
