--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.0",
     "@ngrx/effects": "^14.3.2",
     "@ngrx/store": "^14.3.2",
+    "@ngrx/store-devtools": "^14.3.2",
     "buffer": "^6.0.3",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
